# docs/swagger.json
@@ -5,6 +5,31 @@
         "license": {}
     },
     "paths": {
+        "/command": {
+            "post": {
+                "description": "redis publish",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "redis"
+                ],
+                "parameters": [
+                    {
+                        "description": "command",
+                        "name": "command",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controller.Command"
+                        }
+                    }
+                ]
+            }
+        },
         "/customs": {
             "get": {
                 "description": "전체고객 목록조회",
@@ -165,7 +190,7 @@
                 "parameters": [
                     {
                         "description": "아이디 및 패스워드",
-                        "name": "username",
+                        "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -286,6 +311,28 @@
         }
     },
     "definitions": {
+        "controller.Command": {
+            "type": "object",
+            "required": [
+                "actionkey",
+                "actionval",
+                "dev-id"
+            ],
+            "properties": {
+                "actionkey": {
+                    "type": "string",
+                    "example": "acky"
+                },
+                "actionval": {
+                    "type": "string",
+                    "example": "200"
+                },
+                "dev-id": {
+                    "type": "string",
+                    "example": "Wxldi39DJecl2dUdlJWL34"
+                }
+            }
+        },
         "controller.EquipResponse": {
             "type": "object",
             "properties": {
